--- a/res/layout/activity_date.xml
+++ b/res/layout/activity_date.xml
@@ -6,7 +6,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     tools:context=".DateActivity" >
-
     <TextView
         android:id="@+id/date"
         android:layout_marginTop="10dp"
@@ -16,7 +15,7 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
+   
     <ExpandableListView
         android:id="@+id/expandableSitesList"
         android:layout_marginTop="20dp"
@@ -26,5 +25,14 @@
         android:layout_centerHorizontal="true" 
         android:layout_below="@+id/date">
     </ExpandableListView>
+
+    <ProgressBar
+        android:id="@+id/progressLoadHtml"
+        style="@android:style/Widget.ProgressBar.Small"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/expandableSitesList"
+        android:layout_alignTop="@+id/date"
+        android:visibility="invisible" />
 
 </RelativeLayout>
