--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -48,7 +48,8 @@
 	            android:layout_height="wrap_content"
 	            android:layout_weight="3"      
 	            android:textStyle="bold"
-	            android:text="@string/events_name" />
+	            android:text="@string/events_name" 
+	            android:textIsSelectable="true"/>
 
 	        <TextView
 	            android:id="@+id/events_time"
@@ -74,7 +75,8 @@
 	        android:id="@+id/events_description"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/description" />
+	        android:text="@string/description" 
+	        android:textIsSelectable="true"/>
 	
 	    <TextView
 	        android:id="@+id/events_links_tag"
@@ -102,7 +104,8 @@
 	        android:id="@+id/events_location"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/events_location" />
+	        android:text="@string/events_location" 
+	        android:textIsSelectable="true"/>
 
           <!-- 
            <com.google.android.gms.maps.MapView
