--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -20,7 +20,8 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:layout_gravity="center"
-	        android:textStyle="bold"/>
+	        android:textStyle="bold"
+	        android:textIsSelectable="true"/>
 	
 	    <LinearLayout
 	        android:layout_width="fill_parent"
@@ -58,7 +59,8 @@
 	            android:layout_weight="1"
 	            android:gravity="right"
 	            android:textStyle="bold"
-	            android:text="@string/time_unknown" />
+	            android:text="@string/time_unknown" 
+	            android:textIsSelectable="true"/>
 	
 	        
 	    </LinearLayout>
@@ -69,7 +71,8 @@
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="30dp"
 	        android:textStyle="bold"
-	        android:text="@string/extra_info" />
+	        android:text="@string/extra_info" 
+	        android:textIsSelectable="true"/>
 	
 	    <TextView
 	        android:id="@+id/events_description"
@@ -84,13 +87,15 @@
 	        android:layout_height="wrap_content"
 	        android:layout_marginTop="30dp"
 	        android:textStyle="bold"
-	        android:text="@string/related_links" />
+	        android:text="@string/related_links" 
+	        android:textIsSelectable="true"/>
 	
 	    <TextView
 	        android:id="@+id/events_link"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
-	        android:text="@string/events_links" />
+	        android:text="@string/events_links" 
+	        android:textIsSelectable="true"/>
 
 	    <TextView
 	        android:id="@+id/events_map_tag"
@@ -98,7 +103,8 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:textStyle="bold"
-	        android:text="@string/events_map_tag" />
+	        android:text="@string/events_map_tag" 
+	        android:textIsSelectable="true"/>
 
 	    <TextView
 	        android:id="@+id/events_location"
