--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -80,6 +80,12 @@
 	        android:layout_height="wrap_content"
 	        android:text="@string/description" 
 	        android:textIsSelectable="true"/>
+
+	    <TextView
+	        android:id="@+id/events_origin"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/events_origin" />
 	
 	    <TextView
 	        android:id="@+id/events_links_tag"
