Show the number of new events in the day. Maintain the selected date after reloading. Start checking Drawable animations.

--- a/res/layout/activity_first_time.xml
+++ b/res/layout/activity_first_time.xml
@@ -26,6 +26,11 @@
         android:layout_alignParentTop="true"
         android:src="@drawable/home_find_text" 
         android:contentDescription="@string/image_find_text"/>
+    
+    <ImageView
+        android:id="@+id/wave"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <ProgressBar
         android:id="@+id/progressLoadHtml"
