--- a/res/layout/activity_calendar.xml
+++ b/res/layout/activity_calendar.xml
@@ -6,9 +6,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/papiro2_background"
     tools:context=".CalendarActivity" >
 
-    <com.alvarosantisteban.berlincurator.MyCalendarView
+    <CalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
