--- a/res/layout/activity_date.xml
+++ b/res/layout/activity_date.xml
@@ -5,6 +5,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    android:background="@drawable/papiro2_background"
     tools:context=".DateActivity" >
     <TextView
         android:id="@+id/date"
@@ -15,7 +16,8 @@
         android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-   
+   <!--  android:textColor="@color/common_signin_btn_dark_text_default" -->
+    
     <ExpandableListView
         android:id="@+id/expandableSitesList"
         android:layout_marginTop="20dp"
