--- a/res/drawable-hdpi/building_waves.xml
+++ b/res/drawable-hdpi/building_waves.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <animation-list xmlns:android="http://schemas.android.com/apk/res/android" 
     android:oneshot="false">
-    <item android:drawable="@drawable/wave0" android:duration="300" />
-    <item android:drawable="@drawable/wave1" android:duration="300" />
-    <item android:drawable="@drawable/wave2" android:duration="300" />
-    <item android:drawable="@drawable/wave3" android:duration="300" />
+    <item android:drawable="@drawable/coverpage1" android:duration="300" />
+    <item android:drawable="@drawable/coverpage2" android:duration="300" />
+    <item android:drawable="@drawable/coverpage3" android:duration="300" />
 </animation-list>
