--- a/res/layout/activity_first_time.xml
+++ b/res/layout/activity_first_time.xml
@@ -3,12 +3,8 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".FirstTimeActivity" >
-
+    
     <Button
         android:id="@+id/loadButton"
         android:layout_width="wrap_content"
@@ -26,11 +22,12 @@
         android:layout_alignParentTop="true"
         android:src="@drawable/home_find_text" 
         android:contentDescription="@string/image_find_text"/>
-    
+     
     <ImageView
         android:id="@+id/wave"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/loading_events"/>
 
     <ProgressBar
         android:id="@+id/progressLoadHtml"
