--- a/res/layout/activity_manifesto.xml
+++ b/res/layout/activity_manifesto.xml
@@ -9,6 +9,7 @@
     tools:context=".ManifestoActivity" >
 
     <TextView
+        android:id="@+id/manifesto"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
