--- a/res/xml/old_devices_preferences.xml
+++ b/res/xml/old_devices_preferences.xml
@@ -8,6 +8,12 @@
     	android:summary="@string/possible_organizations_summary" 
     	android:defaultValue="By Type" />
     <Preference 
+		android:key="manifesto"
+	    android:dialogTitle="@string/manifesto_title"
+	    android:summary="@string/manifesto_summary"        
+	    android:title="@string/manifesto_title"
+	    />        
+    <Preference 
         android:key="about"
         android:dialogTitle="@string/about_title"
         android:summary="@string/about_summary"        
