--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -41,13 +41,15 @@
 	            android:paddingRight="5dp"
 	            android:src="@drawable/google_calendar_icon" 
 	            android:contentDescription="@string/add_to_calendar"
+	            android:layout_weight="0" 
 	            android:onClick="addToMyGoogleCalendar"/>
 			
 	        <TextView
 	            android:id="@+id/events_name"
 	            android:layout_width="0px"
-	            android:layout_height="wrap_content"
-	            android:layout_weight="3"      
+	            android:layout_height="fill_parent"
+	            android:layout_weight="4"     
+	            android:gravity="center_vertical" 
 	            android:textStyle="bold"
 	            android:text="@string/events_name" 
 	            android:textIsSelectable="true"/>
@@ -56,13 +58,11 @@
 	            android:id="@+id/events_time"
 	            android:layout_width="0px"
 	            android:layout_height="wrap_content" 
-	            android:layout_weight="1"
+	            android:layout_weight="2"
 	            android:gravity="right"
 	            android:textStyle="bold"
 	            android:text="@string/time_unknown" 
 	            android:textIsSelectable="true"/>
-	
-	        
 	    </LinearLayout>
 	
 	    <TextView
