--- a/res/layout/activity_event.xml
+++ b/res/layout/activity_event.xml
@@ -86,6 +86,12 @@
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:text="@string/events_origin" />
+	    
+	    <TextView
+	        android:id="@+id/events_tags"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:textStyle="italic"/>
 	
 	    <TextView
 	        android:id="@+id/events_links_tag"
